--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects â€” Meghasyam Peddireddy</title>
+    <title>Projects – Meghasyam Peddireddy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -34,7 +34,6 @@
                 </div>
 
                 <div class="projects-grid-full">
-                    <!-- Featured: Plant Disease Detection -->
                     <a href="projects/plant-disease-detection.html" class="project-card featured-card">
                         <div class="card-meta">
                             <span class="category">AI / ML</span>
@@ -59,7 +58,6 @@
                         </div>
                     </a>
 
-                    <!-- Compliance Engine -->
                     <a href="projects/compliance-engine.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Backend Systems</span>
@@ -83,7 +81,6 @@
                         </div>
                     </a>
 
-                    <!-- Air Drawing -->
                     <a href="projects/air-drawing.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Real-Time AI</span>
@@ -107,11 +104,10 @@
                         </div>
                     </a>
 
-                    <!-- Ames Nocturne -->
                     <a href="projects/ames-nocturne.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Game Development</span>
-                            <span class="year">2023â€“Present</span>
+                            <span class="year">2023–Present</span>
                         </div>
                         <div class="card-main">
                             <h2>Ames Nocturne</h2>
@@ -131,7 +127,6 @@
                         </div>
                     </a>
 
-                    <!-- Roguelike -->
                     <a href="projects/roguelike.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Game Development</span>
@@ -155,7 +150,6 @@
                         </div>
                     </a>
 
-                    <!-- Cinematic Almanac -->
                     <a href="projects/cinematic-almanac.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Full-Stack Web</span>
@@ -179,7 +173,6 @@
                         </div>
                     </a>
 
-                    <!-- Cyclone Connect -->
                     <a href="projects/cyclone-connect.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Mobile Development</span>
@@ -203,7 +196,6 @@
                         </div>
                     </a>
 
-                    <!-- OS Scheduler -->
                     <a href="projects/os-scheduler.html" class="project-card">
                         <div class="card-meta">
                             <span class="category">Systems Programming</span>
@@ -230,7 +222,6 @@
             </div>
         </section>
 
-        <!-- CTA -->
         <section class="cta-section">
             <div class="section-container">
                 <h2>Interested in learning more?</h2>
