Fix navbar behavior and styling

--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
         <nav class="nav">
             <a href="/" class="logo">Meghasyam Peddireddy</a>
             <ul class="nav-links">
-                <!-- <li><a href="/projects.html">Work</a></li>
+                <li><a href="/projects.html">Work</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#cv">CV</a></li> -->
+                <li><a href="#cv">CV</a></li>
                 <li><a href="mailto:syam@iastate.edu" class="cta-link">Get in touch</a></li>
             </ul>
         </nav>
