Update portfolio with latest changes

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="section-container">
                 <h2>Featured work</h2>
                 <div class="projects-grid">
-                    <a href="/projects/plant-disease-detection.html" class="project-item featured" style="--accent-rgb: 80, 220, 140;">
+                    <a href="/Projects/plant-disease-detection.html" class="project-item featured" style="--accent-rgb: 80, 220, 140;">
                         <div class="project-year">2025</div>
                         <h3>Plant Disease Detection</h3>
                         <p>Machine learning pipeline for agricultural disease detection. 1st place Pi-515 Innovation Challenge.</p>
@@ -505,35 +505,35 @@
                         <div class="featured-visual"></div>
                     </a>
 
-                    <a href="/projects/compliance-engine.html" class="project-item" style="--accent-rgb: 55, 220, 230;">
+                    <a href="/Projects/compliance-engine.html" class="project-item" style="--accent-rgb: 55, 220, 230;">
                         <div class="project-year">2025</div>
                         <h3>Compliance Engine</h3>
                         <p>Cloud-ready Java backend for rule validation with deterministic logic and LLM explanations.</p>
                         <div class="project-tags"><span>Backend</span><span>Java</span><span>AWS</span></div>
                     </a>
 
-                    <a href="/projects/air-drawing.html" class="project-item" style="--accent-rgb: 125, 95, 255;">
+                    <a href="/Projects/air-drawing.html" class="project-item" style="--accent-rgb: 125, 95, 255;">
                         <div class="project-year">2025</div>
                         <h3>Air Drawing Recognition</h3>
                         <p>Real-time sketch recognition with CNN-LSTM achieving 99.79% accuracy and sub-100ms latency.</p>
                         <div class="project-tags"><span>Real-time AI</span><span>TensorFlow</span><span>MediaPipe</span></div>
                     </a>
 
-                    <a href="/projects/ames-nocturne.html" class="project-item" style="--accent-rgb: 255, 140, 55;">
+                    <a href="/Projects/ames-nocturne.html" class="project-item" style="--accent-rgb: 255, 140, 55;">
                         <div class="project-year">2023–Now</div>
                         <h3>Ames Nocturne</h3>
                         <p>Full-stack 2D game with procedural generation, AI-driven NPCs, and modular architecture.</p>
                         <div class="project-tags"><span>Game Dev</span><span>Unity</span><span>C#</span></div>
                     </a>
 
-                    <a href="/projects/cyclone-connect.html" class="project-item" style="--accent-rgb: 70, 210, 200;">
+                    <a href="/Projects/cyclone-connect.html" class="project-item" style="--accent-rgb: 70, 210, 200;">
                         <div class="project-year">2023</div>
                         <h3>Cyclone Connect</h3>
                         <p>Award-winning Android app for campus connectivity. Best Project of the Semester.</p>
                         <div class="project-tags"><span>Mobile</span><span>Android</span><span>Java</span></div>
                     </a>
 
-                    <a href="/projects/cinematic-almanac.html" class="project-item" style="--accent-rgb: 95, 120, 255;">
+                    <a href="/Projects/cinematic-almanac.html" class="project-item" style="--accent-rgb: 95, 120, 255;">
                         <div class="project-year">2023</div>
                         <h3>The Cinematic Almanac</h3>
                         <p>Full-stack web app for curated cinema with React, Node.js, and MongoDB.</p>
