--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="projects-grid-full">
-                    <a href="projects/plant-disease-detection.html" class="project-card featured-card" style="--accent-rgb: 80, 220, 140;">
+                    <a href="Projects/plant-disease-detection.html" class="project-card featured-card" style="--accent-rgb: 80, 220, 140;">
                         <div class="card-meta">
                             <span class="category">AI / ML</span>
                             <span class="year">2025</span>
@@ -58,7 +58,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/compliance-engine.html" class="project-card" style="--accent-rgb: 55, 220, 230;">
+                    <a href="Projects/compliance-engine.html" class="project-card" style="--accent-rgb: 55, 220, 230;">
                         <div class="card-meta">
                             <span class="category">Backend Systems</span>
                         </div>
@@ -81,7 +81,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/air-drawing.html" class="project-card" style="--accent-rgb: 125, 95, 255;">
+                    <a href="Projects/air-drawing.html" class="project-card" style="--accent-rgb: 125, 95, 255;">
                         <div class="card-meta">
                             <span class="category">Real-Time AI</span>
                             <span class="year">2025</span>
@@ -104,7 +104,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/ames-nocturne.html" class="project-card" style="--accent-rgb: 255, 140, 55;">
+                    <a href="Projects/ames-nocturne.html" class="project-card" style="--accent-rgb: 255, 140, 55;">
                         <div class="card-meta">
                             <span class="category">Game Development</span>
                             <span class="year">2023–Present</span>
@@ -127,7 +127,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/roguelike.html" class="project-card" style="--accent-rgb: 255, 95, 95;">
+                    <a href="Projects/roguelike.html" class="project-card" style="--accent-rgb: 255, 95, 95;">
                         <div class="card-meta">
                             <span class="category">Game Development</span>
                             <span class="year">2025</span>
@@ -150,7 +150,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/cinematic-almanac.html" class="project-card" style="--accent-rgb: 95, 120, 255;">
+                    <a href="Projects/cinematic-almanac.html" class="project-card" style="--accent-rgb: 95, 120, 255;">
                         <div class="card-meta">
                             <span class="category">Full-Stack Web</span>
                             <span class="year">2023</span>
@@ -173,7 +173,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/cyclone-connect.html" class="project-card" style="--accent-rgb: 70, 210, 200;">
+                    <a href="Projects/cyclone-connect.html" class="project-card" style="--accent-rgb: 70, 210, 200;">
                         <div class="card-meta">
                             <span class="category">Mobile Development</span>
                             <span class="year">2023</span>
@@ -196,7 +196,7 @@
                         </div>
                     </a>
 
-                    <a href="projects/os-scheduler.html" class="project-card" style="--accent-rgb: 255, 180, 50;">
+                    <a href="Projects/os-scheduler.html" class="project-card" style="--accent-rgb: 255, 180, 50;">
                         <div class="card-meta">
                             <span class="category">Systems Programming</span>
                             <span class="year">2025</span>
