Update CV download link to new asset path

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                 <h2>Full Credentials</h2>
                 <div class="cv-content">
                     <p>Download my complete CV for detailed information about my education, technical skills, certifications, and comprehensive project portfolio.</p>
-                    <a href="Meghasyam_Peddireddy_CV.pdf" class="btn btn-primary" download>
+                    <a href="assets/Data/Meghasyam_Peddireddy_CV.pdf" class="btn btn-primary" download>
                         <i class="fas fa-download" style="margin-right: 0.75rem;"></i>
                         Download CV
                     </a>
