--- a/index.html
+++ b/index.html
@@ -801,6 +801,13 @@
                         <div class="project-tags"><span>Game Dev</span><span>Unity</span><span>C#</span></div>
                     </a>
 
+                    <a href="/Projects/roguelike.html" class="project-item" style="--accent-rgb: 255, 95, 95;">
+                        <div class="project-year">2025</div>
+                        <h3>Roguelike Game Engine</h3>
+                        <p>Dungeon-based roguelike in C/C++ with procedural generation, Dijkstra pathfinding, and persistent save/load mechanics.</p>
+                        <div class="project-tags"><span>Game Dev</span><span>C/C++</span><span>Ncurses</span></div>
+                    </a>
+
                     <a href="/Projects/cyclone-connect.html" class="project-item" style="--accent-rgb: 70, 210, 200;">
                         <div class="project-year">2023</div>
                         <h3>Cyclone Connect</h3>
