Update contact link and improve about section text

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#cv">CV</a></li>
-                <li><a href="mailto:syam@iastate.edu" class="cta-link">Get in touch</a></li>
+                <li><a href="#contact" class="cta-link">Get in touch</a></li>
             </ul>
         </nav>
     </header>
@@ -758,7 +758,7 @@
                 <h2>About</h2>
                 <div class="about-content">
                     <p class="about-text">
-                        I'm a Computer Science student passionate about full-stack development, machine learning, and systems design. My work spans from building production-grade backends to crafting intelligent game engines, always with a focus on clear communication and thoughtful architecture.
+                        I'm a Computer Science student passionate about full-stack development, machine learning, and systems design. My work spans from building production-grade backends to crafting intelligent game engines—always with a focus on clear communication and thoughtful architecture.
                     </p>
                     <p class="about-text">
                         What drives me is the intersection of technical depth and clarity. Great software isn't just about elegant code; it's about understanding systems holistically and presenting them in ways that resonate.
