Change team size from 'Solo' to '2-person team'

--- a/Projects/cinematic-almanac.html
+++ b/Projects/cinematic-almanac.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="meta-item">
                         <span class="meta-label">Team</span>
-                        <span class="meta-value">Solo</span>
+                        <span class="meta-value">2-person team</span>
                     </div>
                     <div class="meta-item">
                         <span class="meta-label">Status</span>
