--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         .hero-actions { display: flex; gap: 1rem; }
 
-        .photo-card { position: relative; width: 350px; height: 400px; margin: 0 auto; animation: photoFloat 3s ease-in-out infinite; }
+        .photo-card { position: relative; width: 100%; max-width: 350px; aspect-ratio: 7 / 8; margin: 0 auto; animation: photoFloat 3s ease-in-out infinite; }
         @keyframes photoFloat { 0%, 100% { transform: translateY(0px); } 50% { transform: translateY(-10px); } }
 
         .photo-frame { position: relative; width: 100%; height: 100%; border-radius: 1.5rem; overflow: hidden; background: #1a1a1a; border: 1px solid #2a2a2a; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1); }
@@ -672,28 +672,49 @@
         @media (max-width: 1024px) {
             .hero-content { grid-template-columns: 1fr; gap: 2rem; }
             .hero-title { font-size: 3rem; }
-            .photo-card { width: 280px; height: 320px; }
-            
+            .photo-card { max-width: 280px; }
+
             .experience-item {
-                grid-template-columns: 150px 1fr;
-                gap: 1.5rem;
+                grid-template-columns: 1fr;
+                gap: 0.75rem;
+            }
+
+            .experience-period {
+                flex-direction: row;
+                align-items: center;
+                gap: 1rem;
             }
         }
 
         @media (max-width: 768px) {
             .hero-title { font-size: 2.5rem; }
-            .photo-card { width: 240px; height: 280px; }
+            .photo-card { max-width: 220px; }
             .hero-chips { gap: 0.75rem; }
-            .chip { font-size: 0.75rem; padding: 0.4rem 0.8rem; }
-            
+            .chip { font-size: 0.8rem; padding: 0.5rem 0.9rem; }
+
+            .about,
+            .featured-projects,
+            .experience-section,
+            .cta-section { padding: 4rem 1.5rem; }
+            .cv-section { padding: 3rem 1.5rem; }
+
             .experience-item {
                 grid-template-columns: 1fr;
                 gap: 0.5rem;
                 margin-bottom: 2rem;
             }
 
+            .experience-item:hover {
+                transform: translateY(-2px);
+            }
+
             .experience-period {
                 margin-bottom: 0.5rem;
+            }
+
+            .skill-badge {
+                padding: 0.5rem 1rem;
+                font-size: 0.8rem;
             }
 
             .cta-links {
@@ -705,6 +726,32 @@
                 justify-content: center;
             }
         }
+
+        @media (max-width: 480px) {
+            .hero-title { font-size: 1.75rem; }
+            .hero-subtitle { font-size: 0.95rem; }
+            .hero-chips { gap: 0.5rem; }
+            .chip { font-size: 0.7rem; padding: 0.35rem 0.65rem; }
+            .btn { padding: 0.85rem 1.5rem; font-size: 0.95rem; min-width: unset; }
+            .photo-card { max-width: 160px; animation: none; }
+
+            .about h2,
+            .experience-section h2,
+            .cv-section h2,
+            .cta-section h2 { font-size: 2rem; }
+
+            .about,
+            .featured-projects,
+            .experience-section,
+            .cta-section { padding: 3rem 1rem; }
+            .cv-section { padding: 2.5rem 1rem; }
+
+            .experience-item { padding: 1.25rem; margin-bottom: 1.5rem; }
+            .experience-content h3 { font-size: 1.2rem; }
+            .experience-content li { font-size: 0.85rem; }
+
+            .contact-link { padding: 0.85rem 1rem; font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
@@ -714,6 +761,11 @@
     <header class="header" id="mainHeader">
         <nav class="nav">
             <a href="/" class="logo">Meghasyam Peddireddy</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="/projects.html">Work</a></li>
                 <li><a href="#about">About</a></li>
@@ -723,6 +775,7 @@
             </ul>
         </nav>
     </header>
+    <div class="mobile-menu-overlay"></div>
 
     <main>
         <section class="hero">
@@ -987,7 +1040,7 @@
 
     <script>
         const canvas = document.getElementById('particles');
-        if (canvas) {
+        if (canvas && window.innerWidth > 768) {
             const ctx = canvas.getContext('2d');
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
