--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,11 @@
     <header class="header">
         <nav class="nav">
             <a href="/" class="logo">Meghasyam Peddireddy</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="/#about">About</a></li>
                 <li><a href="/projects.html" class="active">Projects</a></li>
@@ -21,6 +26,7 @@
             </ul>
         </nav>
     </header>
+    <div class="mobile-menu-overlay"></div>
 
     <main>
         <section class="projects-page">
