--- a/Projects/cinematic-almanac.html
+++ b/Projects/cinematic-almanac.html
@@ -14,6 +14,11 @@
     <header class="header">
         <nav class="nav">
             <a href="/" class="logo">Meghasyam</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="/projects.html">Work</a></li>
                 <li><a href="/#about">About</a></li>
@@ -22,6 +27,7 @@
             </ul>
         </nav>
     </header>
+    <div class="mobile-menu-overlay"></div>
 
     <main>
         <section class="project-hero">
@@ -40,7 +46,7 @@
                 <div class="hero-meta">
                     <div class="meta-item">
                         <span class="meta-label">Duration</span>
-                        <span class="meta-value">Jan 2023 – May 2023</span>
+                        <span class="meta-value">Jan 2023 - May 2023</span>
                     </div>
                     <div class="meta-item">
                         <span class="meta-label">Role</span>
